--- a/hoverlinks.css
+++ b/hoverlinks.css
@@ -2,7 +2,7 @@
     position:absolute;
     z-index:1070;
     display:block;
-    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:"Times New Roman",serif;
     font-style:normal;
     font-weight:400;
     line-height:1.42857143;
@@ -18,8 +18,7 @@
     word-wrap:normal;
     white-space:normal;
     font-size:12px;
-    filter:alpha(opacity=0);
-    opacity:0
+    opacity:25
 }
 .tooltip.in{
     filter:alpha(opacity=90);
