--- a/hoverlinks.css
+++ b/hoverlinks.css
@@ -18,7 +18,7 @@
     word-wrap:normal;
     white-space:normal;
     font-size:12px;
-    opacity:25
+    opacity:50;
 }
 .tooltip.in{
     filter:alpha(opacity=90);
